add photo, edit index and about

--- a/about.html
+++ b/about.html
@@ -10,15 +10,14 @@ title: About
             <img src="{{ site.baseurl }}/images/self.jpg">
           </div>
           <div class="col-md-9">
-            <h1>Herring Cove</h1>
-            <p><i class="fa fa-map-marker"></i>&nbsp;&nbsp;42°2'16"N   70°12'47"W</p>
-            <p><i class="fa fa-envelope-o"></i>&nbsp;rnpatel[at]me.com </p>
+            <h1>Qing Ping (平 青)</h1>
+            <p><i class="fa fa-envelope-o"></i>&nbsp;qp27[at]drexel.edu </p>
             <hr />
           </div>
         </div>
         <div class="row">
           <div class="col-md-12 letter">
-            <p>Hi, I'm Herring Cove, a theme for Jekyll from Massachusetts. You may also know me as a <a href="http://wikimapia.org/38526/Herring-Cove-Beach">beach on Cape Cod</a>.</p>
+            <p>My name is Qing Ping, a fifth-year Ph.D. student in Information Science from Drexel University. My research interests include video shot representation with time-sync comments, visual storytelling and scientific statement representation. Before joining Drexel, I completed my master degree at Dalian University of Technology, and my bachelor degree at Dalian University of Technology. <br><br> You can find my resume  <a href="https://www.dropbox.com/s/5eou8bs00l62k5x/QING%20PING%202017-1.pdf?dl=0">here</a>.</p>
           </div>
         </div>
     </div>
