add photo, edit index and about

--- a/about.html
+++ b/about.html
@@ -7,16 +7,16 @@ title: About
       <div class="user-card">
         <div class="row">
           <div class="card col-md-3">
-            <img src="{{ site.baseurl }}/images/self.jpg">
+            <img hspace="20" vspace="23" src="{{ site.baseurl }}/images/self.jpg">
           </div>
-          <div class="col-md-9">
+          <div class="col-md-9" hspace="20">
             <h1>Qing Ping (平 青)</h1>
             <p><i class="fa fa-envelope-o"></i>&nbsp;qp27[at]drexel.edu </p>
             <hr />
           </div>
         </div>
         <div class="row">
-          <div class="col-md-12 letter">
+          <div hspace="10%" vspace="10%" class="col-md-12 letter">
             <p>My name is Qing Ping, a fifth-year Ph.D. student in Information Science from Drexel University. My research interests include video shot representation with time-sync comments, visual storytelling and scientific statement representation. Before joining Drexel, I completed my master degree at Dalian University of Technology, and my bachelor degree at Dalian University of Technology. <br><br> You can find my resume  <a href="https://www.dropbox.com/s/5eou8bs00l62k5x/QING%20PING%202017-1.pdf?dl=0">here</a>.</p>
           </div>
         </div>
