add photo, edit index and about

--- a/about.html
+++ b/about.html
@@ -7,9 +7,9 @@ title: About
       <div class="user-card">
         <div class="row">
           <div class="card col-md-3">
-            <img hspace="20" vspace="23" src="{{ site.baseurl }}/images/self.jpg">
+            <img hspace="10%" vspace="10%" src="{{ site.baseurl }}/images/self.jpg">
           </div>
-          <div class="col-md-9" hspace="20">
+          <div class="col-md-9" hspace="10%">
             <h1>Qing Ping (平 青)</h1>
             <p><i class="fa fa-envelope-o"></i>&nbsp;qp27[at]drexel.edu </p>
             <hr />
