add photo, edit index and about

--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,7 @@ title: Projects
     <div class="project-box">
       <div class="row">
         <div class="col-md-3 project-image">
-          <img hspace="20" vspace="23" src="/images/self.jpg">
+          <img hspace="20" vspace="23" src="/images/videohighlights.png">
         </div>
         <div class="col-md-9 project-post">
           <h2>Video Highlight Detection with Time-sync Comments</h2><h4>more details</h4>
