add photo, edit index and about

--- a/links.html
+++ b/links.html
@@ -4,11 +4,10 @@ title: Links
   <div class="container">
 
     <div id="article">
-      <h1>Links</h1>
-      <p>I find a wide variety of things interesting and/or useful on the web. These are just some of them.</p>
-      <br>
+      <h1>Background</h1>
+
       <center>
-      <a href="#fashion"><span class="label label-danger fashion-button">Fashion</span></a>
+      <a href="#education"><span class="label label-danger fashion-button">Education</span></a>
       <a href="#programming"><span class="label label-danger programming-button">Programming</span></a>
       <a href="#tech"><span class="label label-danger tech-button">Tech & Gadgets</span></a>
       <a href="#misc"><span class="label label-danger misc-button">Misc</span></a>
@@ -17,25 +16,25 @@ title: Links
       <br>
     </div>
 
-    <div id="article" class="fashion">
-      <a name="fashion">
+    <div id="article" class="education">
+      <a name="education">
       <h2>Fashion</h2>
       <table class="table table-hover ">
         <tbody>
           <tr>
             <td valign="top" class="td1">
-              <p class="p2"><span class="s1"><b>site</b></span></p>
+              <p class="p2"><span class="s1"><b>09-22-2013 to present</b></span></p>
             </td>
             <td valign="top" class="td1">
-              <p class="p2"><span class="s1"><b>what is it</b></span></p>
+              <p class="p2"><span class="s1"><b>Ph.D. student in Drexel University</b></span></p>
             </td>
           </tr>
           <tr>
             <td valign="top" class="td2">
-              <p class="p2"><span class="s2"><a href="http://reddit.com/r/malefashionadvice"><b>r/malefashionadvice</b></a></span></p>
+              <p class="p2"><span class="s2">09-01-2010 to 06-10-2013</span></p>
             </td>
             <td valign="top" class="td3">
-              <p class="p2"><span class="s1">This is the go-to community for beginners in male fashion. Their FAQ guides are extremely helpful. The fashion here tends to be more of the casual-professional side, with a healthy dose of urban fashionwear.<span class="Apple-converted-space"> </span></span></p>
+              <p class="p2"><span class="s1">Master degree in Management Science and Engineering <br><br>Dalian Univeristy of Technology, Dalian, China<span class="Apple-converted-space"> </span></span></p>
             </td>
           </tr>
           <tr>
