--- a/links.html
+++ b/links.html
@@ -18,28 +18,28 @@ title: Links
 
     <div id="article" class="education">
       <a name="education">
-      <h2>Fashion</h2>
+      <h2>Education</h2>
       <table class="table table-hover ">
         <tbody>
           <tr>
             <td valign="top" class="td1">
-              <p class="p2"><span class="s1"><b>09-22-2013 to present</b></span></p>
+              <p class="p2"><span class="s1"><b>2013.09 to present</b></span></p>
             </td>
             <td valign="top" class="td1">
-              <p class="p2"><span class="s1"><b>Ph.D. student in Drexel University</b></span></p>
+              <p class="p2"><span class="s1"><b>Drexel University, USA</b><br>Ph.D. student in Information Science</span></p>
             </td>
           </tr>
           <tr>
             <td valign="top" class="td2">
-              <p class="p2"><span class="s2">09-01-2010 to 06-10-2013</span></p>
+              <p class="p2"><span class="s2"><b>2010.09 to 2013.06</b></span></p>
             </td>
             <td valign="top" class="td3">
-              <p class="p2"><span class="s1">Master degree in Management Science and Engineering <br><br>Dalian Univeristy of Technology, Dalian, China<span class="Apple-converted-space"> </span></span></p>
+              <p class="p2"><span class="s1"><b>Dalian Univeristy of Technology, Dalian, China</b> <br><b>Master degree in Management Science and Engineering</b> <span class="Apple-converted-space"> </span></span></p>
             </td>
           </tr>
           <tr>
             <td valign="top" class="td4">
-              <p class="p2"><span class="s1"><a href="http://4chan.org/fa/"><b>/fa/</b></a></span></p>
+              <p class="p2"><span class="s1"><b></b></span></p>
             </td>
             <td valign="top" class="td5">
               <p class="p2"><span class="s1">Not mentioning whatever stigmas 4chan has, I’ve found the /fa/ community to be a great resource for anyone interested in more urban fashion. High end designers are greatly favored here (such as Rick Owens). Their FAQ is straightforward.<span class="Apple-converted-space"> </span></span></p>
