--- a/links.html
+++ b/links.html
@@ -16,13 +16,13 @@ title: Links
       <br>
     </div>
 
-    <div id="article" class="education">
+    <div id="article" class="fashion">
       <a name="education">
       <h2>Education</h2>
       <table class="table table-hover ">
         <tbody>
           <tr>
-            <td valign="top" class="td1">
+            <td width="30%" valign="top" class="td1">
               <p class="p2"><span class="s1"><b>2013.09 to present</b></span></p>
             </td>
             <td valign="top" class="td1">
@@ -30,29 +30,22 @@ title: Links
             </td>
           </tr>
           <tr>
-            <td valign="top" class="td2">
+            <td width="30%" valign="top" class="td2">
               <p class="p2"><span class="s2"><b>2010.09 to 2013.06</b></span></p>
             </td>
             <td valign="top" class="td3">
-              <p class="p2"><span class="s1"><b>Dalian Univeristy of Technology, Dalian, China</b> <br><b>Master degree in Management Science and Engineering</b> <span class="Apple-converted-space"> </span></span></p>
+              <p class="p2"><span class="s1"><b>Dalian Univeristy of Technology, Dalian, China</b> <br>Master degree in Management Science and Engineering<span class="Apple-converted-space"> </span></span></p>
             </td>
           </tr>
           <tr>
-            <td valign="top" class="td4">
+            <td width="30%" valign="top" class="td4">
               <p class="p2"><span class="s1"><b></b></span></p>
             </td>
             <td valign="top" class="td5">
               <p class="p2"><span class="s1">Not mentioning whatever stigmas 4chan has, I’ve found the /fa/ community to be a great resource for anyone interested in more urban fashion. High end designers are greatly favored here (such as Rick Owens). Their FAQ is straightforward.<span class="Apple-converted-space"> </span></span></p>
             </td>
           </tr>
-          <tr>
-            <td valign="top" class="td6">
-              <p class="p2"><span class="s1"><a href="http://dappered.com"><b>dappered</b></a></span></p>
-            </td>
-            <td valign="top" class="td7">
-              <p class="p2"><span class="s1">Joe does an amazing job with Dappered. With daily posts ranging from style advice to killer deals, this is a must add for your bookmarks. I find this perfect for those looking to dress business-casual.</span></p>
-            </td>
-          </tr>
+
         </tbody>
       </table>
     </div>
