add photo, edit index and about

--- a/links.html
+++ b/links.html
@@ -22,7 +22,7 @@ title: Links
       <table class="table table-hover ">
         <tbody>
           <tr>
-            <td width="30%" valign="top" class="td1">
+            <td width="23%" valign="top" class="td1">
               <p class="p2"><span class="s1"><b>2013.09 to present</b></span></p>
             </td>
             <td valign="top" class="td1">
@@ -30,7 +30,7 @@ title: Links
             </td>
           </tr>
           <tr>
-            <td width="30%" valign="top" class="td2">
+            <td width="23%" valign="top" class="td2">
               <p class="p2"><span class="s2"><b>2010.09 to 2013.06</b></span></p>
             </td>
             <td valign="top" class="td3">
@@ -38,11 +38,11 @@ title: Links
             </td>
           </tr>
           <tr>
-            <td width="30%" valign="top" class="td4">
-              <p class="p2"><span class="s1"><b></b></span></p>
+            <td width="23%" valign="top" class="td4">
+              <p class="p2"><span class="s1"><b>2006.09 to 2013.06</b></span></p>
             </td>
             <td valign="top" class="td5">
-              <p class="p2"><span class="s1">Not mentioning whatever stigmas 4chan has, I’ve found the /fa/ community to be a great resource for anyone interested in more urban fashion. High end designers are greatly favored here (such as Rick Owens). Their FAQ is straightforward.<span class="Apple-converted-space"> </span></span></p>
+              <p class="p2"><span class="s1"><b>Dalian Maritime University, Dalian China</b><br>Bachelor degree in Information Management and Information Systems<span class="Apple-converted-space"> </span></span></p>
             </td>
           </tr>
 
