--- a/links.html
+++ b/links.html
@@ -23,26 +23,26 @@ title: Links
         <tbody>
           <tr>
             <td width="23%" valign="top" class="td1">
-              <p class="p2"><span class="s1"><b>2013.09 to present</b></span></p>
+              <p color="#2d1e18" class="p2"><span class="s1"><b>2013.09 to present</b></span></p>
             </td>
             <td valign="top" class="td1">
-              <p class="p2"><span class="s1"><b>Drexel University, USA</b><br>Ph.D. student in Information Science</span></p>
+              <p color="#2d1e18" class="p2"><span class="s1"><b>Drexel University, USA</b><br>Ph.D. student in Information Science (3.82/4)</span></p>
             </td>
           </tr>
           <tr>
             <td width="23%" valign="top" class="td2">
-              <p class="p2"><span class="s2"><b>2010.09 to 2013.06</b></span></p>
+              <p color="#2d1e18"  class="p2"><span class="s2"><b>2010.09 to 2013.06</b></span></p>
             </td>
             <td valign="top" class="td3">
-              <p class="p2"><span class="s1"><b>Dalian Univeristy of Technology, Dalian, China</b> <br>Master degree in Management Science and Engineering<span class="Apple-converted-space"> </span></span></p>
+              <p color="#2d1e18" class="p2"><span class="s1"><b>Dalian Univeristy of Technology, Dalian, China</b> <br>Master degree in Management Science and Engineering (1/60)<span class="Apple-converted-space"> </span></span></p>
             </td>
           </tr>
           <tr>
             <td width="23%" valign="top" class="td4">
-              <p class="p2"><span class="s1"><b>2006.09 to 2013.06</b></span></p>
+              <p color="#2d1e18" class="p2"><span class="s1"><b>2006.09 to 2013.06</b></span></p>
             </td>
             <td valign="top" class="td5">
-              <p class="p2"><span class="s1"><b>Dalian Maritime University, Dalian China</b><br>Bachelor degree in Information Management and Information Systems<span class="Apple-converted-space"> </span></span></p>
+              <p color="#2d1e18" class="p2"><span class="s1"><b>Dalian Maritime University, Dalian China</b><br>Bachelor degree in Information Management and Information Systems (1/180)<span class="Apple-converted-space"> </span></span></p>
             </td>
           </tr>
 
