--- a/links.html
+++ b/links.html
@@ -23,26 +23,26 @@ title: Links
         <tbody>
           <tr>
             <td width="23%" valign="top" class="td1">
-              <p color="#2d1e18" class="p2"><span class="s1"><b>2013.09 to present</b></span></p>
+              <p class="p2"><span color="#2d1e18" class="s1"><b>2013.09 to present</b></span></p>
             </td>
             <td valign="top" class="td1">
-              <p color="#2d1e18" class="p2"><span class="s1"><b>Drexel University, USA</b><br>Ph.D. student in Information Science (3.82/4)</span></p>
+              <p color="#2d1e18" class="p2"><span color="#2d1e18" class="s1"><b>Drexel University, USA</b><br>Ph.D. student in Information Science (3.82/4)</span></p>
             </td>
           </tr>
           <tr>
             <td width="23%" valign="top" class="td2">
-              <p color="#2d1e18"  class="p2"><span class="s2"><b>2010.09 to 2013.06</b></span></p>
+              <p color="#2d1e18"  class="p2"><span color="#2d1e18" class="s2"><b>2010.09 to 2013.06</b></span></p>
             </td>
             <td valign="top" class="td3">
-              <p color="#2d1e18" class="p2"><span class="s1"><b>Dalian Univeristy of Technology, Dalian, China</b> <br>Master degree in Management Science and Engineering (1/60)<span class="Apple-converted-space"> </span></span></p>
+              <p color="#2d1e18" class="p2"><span color="#2d1e18" class="s1"><b>Dalian Univeristy of Technology, Dalian, China</b> <br>Master degree in Management Science and Engineering (1/60)<span class="Apple-converted-space"> </span></span></p>
             </td>
           </tr>
           <tr>
             <td width="23%" valign="top" class="td4">
-              <p color="#2d1e18" class="p2"><span class="s1"><b>2006.09 to 2013.06</b></span></p>
+              <p color="#2d1e18" class="p2"><span color="#2d1e18" class="s1"><b>2006.09 to 2013.06</b></span></p>
             </td>
             <td valign="top" class="td5">
-              <p color="#2d1e18" class="p2"><span class="s1"><b>Dalian Maritime University, Dalian China</b><br>Bachelor degree in Information Management and Information Systems (1/180)<span class="Apple-converted-space"> </span></span></p>
+              <p color="#2d1e18" class="p2"><span color="#2d1e18" class="s1"><b>Dalian Maritime University, Dalian China</b><br>Bachelor degree in Information Management and Information Systems (1/180)<span class="Apple-converted-space"> </span></span></p>
             </td>
           </tr>
 
@@ -57,26 +57,34 @@ title: Links
         <tbody>
           <tr>
             <td valign="top" class="td1">
-              <p class="p2"><span class="s1"><a href="https://news.ycombinator.com/news"><b>hacker news</b></a></span></p>
+              <p class="p2"><span class="s1">Machine Learning</span></p>
             </td>
             <td valign="top" class="td2">
-              <p class="p2"><span class="s1">An indispensable community if you’re interested in the more technical side of tech. Incredibly smart people discussing equally (usually) smart topics. <span class="Apple-converted-space"> </span></span></p>
+              <p class="p2"><span class="s1">Tensorflow, Sklearn, NTLK, Weka<span class="Apple-converted-space"> </span></span></p>
             </td>
           </tr>
           <tr>
             <td valign="top" class="td3">
-              <p class="p2"><span class="s1"><a href="http://reddit.com/r/programming"><b>r/programming</b></a></span></p>
+              <p class="p2"><span class="s1">Statistical Analysis</span></p>
             </td>
             <td valign="top" class="td4">
-              <p class="p2"><span class="s1">An excellent resource for programmers both beginner and experienced. Be sure to check out other related subreddits from their sidebar.<span class="Apple-converted-space"> </span></span></p>
+              <p class="p2"><span class="s1">R, Python, Matlab, SPSS<span class="Apple-converted-space"> </span></span></p>
             </td>
           </tr>
           <tr>
             <td valign="top" class="td5">
-              <p class="p2"><span class="s1"><a href="http://www.codersgrid.com"><b>coders grid</b></a></span></p>
+              <p class="p2"><span class="s1">Programming Language</span></p>
             </td>
             <td valign="top" class="td6">
-              <p class="p2"><span class="s1">Great collection of links and articles related to mostly front end development.<span class="Apple-converted-space"> </span></span></p>
+              <p class="p2"><span class="s1">Python, Java, C<span class="Apple-converted-space"> </span></span></p>
+            </td>
+          </tr>
+          <tr>
+            <td valign="top" class="td7">
+              <p class="p2"><span class="s1">Data Visualization</span></p>
+            </td>
+            <td valign="top" class="td7">
+              <p class="p2"><span class="s1">D3.js (+Javascript), R, Tableau, Gephi, Pajek.<span class="Apple-converted-space"> </span></span></p>
             </td>
           </tr>
         </tbody>
