add photo, edit index and about

--- a/links.html
+++ b/links.html
@@ -9,9 +9,9 @@ title: Links
       <center>
       <a href="#education"><span class="label label-danger fashion-button">Education</span></a>
       <a href="#programming"><span class="label label-danger programming-button">Programming</span></a>
-      <a href="#tech"><span class="label label-danger tech-button">Tech & Gadgets</span></a>
-      <a href="#misc"><span class="label label-danger misc-button">Misc</span></a>
-      <a href="#misc"><span class="label label-danger podcasts-button">Podcasts</span></a>
+      <a href="#tech"><span class="label label-danger tech-button">Awards</span></a>
+      <a href="#misc"><span class="label label-danger misc-button">Services</span></a>
+
       </center>
       <br>
     </div>
@@ -56,7 +56,7 @@ title: Links
       <table class="table table-hover ">
         <tbody>
           <tr>
-            <td valign="top" class="td1">
+            <td width="23%" valign="top" class="td1">
               <p class="p2"><span class="s1">Machine Learning</span></p>
             </td>
             <td valign="top" class="td2">
@@ -64,7 +64,7 @@ title: Links
             </td>
           </tr>
           <tr>
-            <td valign="top" class="td3">
+            <td width="23%" valign="top" class="td3">
               <p class="p2"><span class="s1">Statistical Analysis</span></p>
             </td>
             <td valign="top" class="td4">
@@ -72,7 +72,7 @@ title: Links
             </td>
           </tr>
           <tr>
-            <td valign="top" class="td5">
+            <td width="23%" valign="top" class="td5">
               <p class="p2"><span class="s1">Programming Language</span></p>
             </td>
             <td valign="top" class="td6">
@@ -80,7 +80,7 @@ title: Links
             </td>
           </tr>
           <tr>
-            <td valign="top" class="td7">
+            <td width="23%" valign="top" class="td7">
               <p class="p2"><span class="s1">Data Visualization</span></p>
             </td>
             <td valign="top" class="td7">
@@ -93,31 +93,39 @@ title: Links
 
     <div id="article"class="tech">
       <a name="tech">
-      <h2>Tech & Gadgets</h2>
+      <h2>Awards</h2>
       <table class="table table-hover ">
         <tbody>
           <tr>
             <td valign="top" class="td1">
-              <p class="p2"><span class="s1"><a href="http://www.theverge.com"><b>the verge</b></a></span></p>
+              <p class="p2"><span class="s1">2010</a></span></p>
             </td>
             <td valign="top" class="td2">
-              <p class="p2"><span class="s2">My go to site for tech news. Their longform work is also deserving of your time.</span></p>
+              <p class="p2"><span class="s2">All Merit Student Award of Liaoning Province (1/180)</span></p>
             </td>
           </tr>
           <tr>
             <td valign="top" class="td3">
-              <p class="p2"><span class="s1"><a href="http://recode.net"><b>re/code</b></a></span></p>
+              <p class="p2"><span class="s1">2009</span></p>
             </td>
             <td valign="top" class="td4">
-              <p class="p2"><span class="s2">Essentially the entire (great) team from AllThings D moved over to a separate site at the turn of the year. An excellent resource for reliable news and reviews.</span></p>
+              <p class="p2"><span class="s2">All Merit Student Award of Dalian city (1/180).</span></p>
             </td>
           </tr>
           <tr>
             <td valign="top" class="td5">
-              <p class="p2"><span class="s1"><a href="http://www.anandtech.com"><b>anandtech</b></a></span><span class="s2"><b><span class="Apple-converted-space"> </span></b></span></p>
+              <p class="p2"><span class="s1">2008</span></p>
             </td>
             <td valign="top" class="td6">
-              <p class="p2"><span class="s2">Want to read the most in-depth reviews on products? Look no further.<span class="Apple-converted-space"> </span></span></p>
+              <p class="p2"><span class="s2">National Student Fellowship, first-prize (1/180). </span></p>
+            </td>
+          </tr>
+         <tr>
+            <td valign="top" class="td5">
+              <p class="p2"><span class="s1">2007</span></p>
+            </td>
+            <td valign="top" class="td6">
+              <p class="p2"><span class="s2">NYK Student Fellowship, first-prize (1/180). </span></p>
             </td>
           </tr>
         </tbody>
@@ -126,76 +134,29 @@ title: Links
 
     <div id="article"class="misc">
       <a name="misc">
-      <h2>Misc</h2>
+      <h2>Services</h2>
       <table class="table table-hover ">
         <tbody>
           <tr>
             <td valign="top" class="td1">
-              <p class="p2"><span class="s1"><a href="http://www.quora.com"><b>Quora</b></a></span></p>
-            </td>
             <td valign="top" class="td2">
-              <p class="p2"><span class="s2">Think Yahoo! Answers but more…serious. You can find some discussions on very interesting questions. You do need to sign up though.<span class="Apple-converted-space"> </span></span></p>
+              <p class="p2"><span class="s2">Volunteer for EMNLP 2017</span></p>
             </td>
           </tr>
           <tr>
-            <td valign="top" class="td3">
-              <p class="p2"><span class="s1"><a href="http://longform.org"><b>Longform</b></a></span></p>
-            </td>
             <td valign="top" class="td4">
-              <p class="p2"><span class="s2">One of the best collections of reading (both fiction and non-fiction articles) material for your Pocket.<span class="Apple-converted-space"> </span></span></p>
+              <p class="p2"><span class="s2">Reviewer for <a href="http://journals.sagepub.com/home/ivi#"><span>Information Visualization</span></a>.</span></p>
             </td>
           </tr>
           <tr>
-            <td valign="top" class="td5">
-              <p class="p2"><span class="s2"><b>Ask </b><a href="http://ask.metafilter.com"><span class="s1"><b>Metafilter</b></span></a></span></p>
-            </td>
             <td valign="top" class="td6">
-              <p class="p2"><span class="s2">A great loyal community whose quality is in part kept high with a pay-for-membership model. Browse through the top questions for some great discussions.<span class="Apple-converted-space"> </span></span></p>
+              <p class="p2"><span class="s2">Reviewer for iConference 2016</span></p>
             </td>
           </tr>
         </tbody>
       </table>
     </div>
 
-    <div id="article"class="podcasts">
-      <a name="podcasts">
-      <h2>Podcasts</h2>
-      <table class="table table-hover ">
-        <tbody>
-          <tr>
-            <td valign="top" class="td1">
-              <p class="p2"><span class="s1"><a href="http://www.twit.tv"><b>twit.tv</b></a></span></p>
-            </td>
-            <td valign="top" class="td2">
-              <p class="p2"><span class="s2">Leo Laporte is<span class="Apple-converted-space">  </span>great to listen to and his guests help keep the discussions fun and lively. My favorite podcasts include “This Week in Tech” and “Windows Weekly”<span class="Apple-converted-space"> </span></span></p>
-            </td>
-          </tr>
-          <tr>
-            <td valign="top" class="td3">
-              <p class="p2"><span class="s1"><a href="http://howtodoeverything.org"><b>How to do Everything (NPR)</b></a></span></p>
-            </td>
-            <td valign="top" class="td4">
-              <p class="p2"><span class="s2">How do you order water at a restaurant without looking like an idiot? One part educational, one part humor.</span></p>
-            </td>
-          </tr>
-          <tr>
-            <td valign="top" class="td1">
-              <p class="p2"><span class="s1"><a href="http://www.radiolab.org"><b>Radiolab (NPR)</b></a></span></p>
-            </td>
-            <td valign="top" class="td2">
-              <p class="p2"><span class="s2">Radiolab has a huge fanbase and it’s not without reason. They do a great job of keeping your attention with engrossing topics and amazing audio work. <span class="Apple-converted-space"> </span></span></p>
-            </td>
-          </tr>
-          <tr>
-            <td valign="top" class="td5">
-              <p class="p2"><span class="s1"><a href="http://www.npr.org/blogs/allsongs/"><b>all songs considered (NPR)</b></a></span></p>
-            </td>
-            <td valign="top" class="td6">
-              <p class="p2"><span class="s2">NPR’s music podcast can be a hit or a miss depending on your taste (less mainstream, more discovery based)<span class="Apple-converted-space">  </span>in music but be sure to give it try.<span class="Apple-converted-space"> </span></span></p>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
+
 
   </div>
