add photo, edit index and about

--- a/links.html
+++ b/links.html
@@ -96,6 +96,14 @@ title: Links
       <h2>Awards</h2>
       <table class="table table-hover ">
         <tbody>
+        <tr>
+            <td valign="top" class="td1">
+              <p class="p2"><span class="s1">2010-2013</a></span></p>
+            </td>
+            <td valign="top" class="td2">
+              <p class="p2"><span class="s2">National Student Fellowship, first-prize (1/60).</span></p>
+            </td>
+          </tr>
           <tr>
             <td valign="top" class="td1">
               <p class="p2"><span class="s1">2010</a></span></p>
