add photo, edit index and about

--- a/list.html
+++ b/list.html
@@ -2,11 +2,43 @@
 title: All Posts
 ---
 <div class="container">
-  <div id="article">
-  <h1>Archive</h1>
-  <ul class="posts">
-    {% for post in site.posts %}
-    <li><span><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a><time class="pull-right post-list">{{ post.date | date_to_string | date: "%b %-d, %Y"  }}</h4></time></span></span></li>
-    {% endfor %}
-  </ul>
+<div id="article" class="fashion">
+      <a name="education">
+      <h2>Publications</h2>
+      <table class="table table-hover ">
+        <tbody>
+          <tr>
+            <td valign="top" class="td1">
+              <p color="#2d1e18" class="p2"><span color="#2d1e18" class="s1">Ping, Q., & Chen, C. (2017). Video Highlights Detection and Summarization with Lag-Calibration based on Concept-Emotion Mapping of Crowd-sourced Time-Sync Comments. EMNLP 2017, 1.</span></p>
+            </td>
+          </tr>
+          <tr>
+            <td valign="top" class="td3">
+              <p color="#2d1e18" class="p2"><span color="#2d1e18" class="s1">Ping, Q., & Chen, C. (2017). LitStoryTeller: An Interactive System for Visual Exploration of Scientific Papers Leveraging Named entities and Comparative Sentences. ISSI 2017.<span class="Apple-converted-space"> </span></span></p>
+            </td>
+          </tr>
+          <tr>
+            <td valign="top" class="td5">
+              <p color="#2d1e18" class="p2"><span color="#2d1e18" class="s1">Ping, Q., He, J., & Chen, C. (2017). How many ways to use CiteSpace? A study of user interactive events over 14 months. Journal of the Association for Information Science and Technology, 68(5), 1234-1256.</span></p>
+            </td>
+            <td valign="top" class="td5">
+              <p color="#2d1e18" class="p2"><span color="#2d1e18" class="s1">Ping, Q., Yang, C. C., Marshall, S. A., Avis, N. E., & Ip, E. H. (2016). Breast Cancer Symptom Clusters Derived From Social Media and Research Study Data Using Improved K-Medoid Clustering. IEEE Transactions on Computational Social Systems, 3(2), 63-74.</span></p>
+            </td>
+            <td valign="top" class="td5">
+              <p color="#2d1e18" class="p2"><span color="#2d1e18" class="s1">Marshall, S. A., Yang, C. C., Ping, Q., Zhao, M., Avis, N. E., & Ip, E. H. (2016). Symptom clusters in women with breast cancer: an analysis of data from social media and a research study. Quality of Life Research, 25(3), 547-557.</span></p>
+            </td>
+            <td valign="top" class="td5">
+              <p color="#2d1e18" class="p2"><span color="#2d1e18" class="s1">Yang, C. C., Ip, E., Avis, N., Ping, Q., & Jiang, L. (2015, March). A Comparative Study of Symptom Clustering On Clinical and Social Media Data. In International Conference on Social Computing, Behavioral-Cultural Modeling, and Prediction (pp. 222-231). Springer, Cham.</span></p>
+            </td>
+            <td valign="top" class="td5">
+              <p color="#2d1e18" class="p2"><span color="#2d1e18" class="s1">Kim, M. C., Feng, Y., Zhu, Y., & Ping, Q. (2015). Quantitative exploration into the diffusion process of creative ideas in economics: Nobel prize laureates. Proceedings of the Association for Information Science and Technology, 52(1), 1-4.</span></p>
+            </td>
+            <td valign="top" class="td5">
+              <p color="#2d1e18" class="p2"><span color="#2d1e18" class="s1">Fan, Y., Hu, X., Tang, X., Ping, Q., & Wu, W. (2016, December). A novel algorithm for identifying essential proteins by integrating subcellular localization. In Bioinformatics and Biomedicine (BIBM), 2016 IEEE International Conference on (pp. 107-110). IEEE. Chicago.</span></p>
+            </td>
+          </tr>
+
+        </tbody>
+      </table>
+    </div>
 </div>
