--- a/projects.html
+++ b/projects.html
@@ -64,7 +64,7 @@ title: Projects
     <div class="project-box">
       <div class="row">
         <div class="col-md-3 project-image">
-          <img hspace="20" vspace="23" src="/images/user_event_path.png">
+          <img hspace="20" vspace="23" src="/images/symptom_clusters.png">
         </div>
         <div class="col-md-9 project-post">
           <h3>Breast Cancer Symptom Clusters Derived From Social Media and Research Study Data Using Improved K-Medoid Clustering</h3><h4><a href="http://ieeexplore.ieee.org/abstract/document/7737067/">paper</a> | more details</h4>
