--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@ title: About
         </div>
         <div class="row">
           <div hspace="10%" vspace="10%" class="col-md-12 letter">
-            <p>My name is Qing Ping, a fifth-year Ph.D. student in Information Science from Drexel University. My research interests include video shot representation with time-sync comments, visual storytelling and scientific statement representation. Before joining Drexel, I completed my master degree at Dalian University of Technology, and my bachelor degree at Dalian University of Technology. <br><br> You can find my resume  <a href="https://www.dropbox.com/s/5eou8bs00l62k5x/QING%20PING%202017-1.pdf?dl=0">here</a>.</p>
+            <p>I’m a fifth-year Ph.D. candidate in Information Science at Drexel University. My research interests include information extraction from text document (full-text research papers/online video chats), and interactive visual storytelling of such text documents for easier browsing. My skillset includes machine learning (common machine learning algorithms, sentiment analysis, deep learning), information visualization (D3.js. Tableau, Gephi, Pajek, etc.) and programming (Python, Java, R, etc.). Currently I’m looking for a full-time job in Machine Learning scientist/engineer, data scientist and/or software developer. <br><br> You can find my resume  <a href="https://www.dropbox.com/s/5eou8bs00l62k5x/QING%20PING%202017-1.pdf?dl=0">here</a>.</p>
           </div>
         </div>
     </div>
