--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@ title: About
         </div>
         <div class="row">
           <div hspace="10%" vspace="10%" class="col-md-12 letter">
-            <p>I’m a fifth-year Ph.D. candidate in Information Science at Drexel University. My research interests include information extraction from text document (full-text research papers/online video chats), and interactive visual storytelling of such text documents for easier browsing. My skillset includes machine learning (common machine learning algorithms, sentiment analysis, deep learning), information visualization (D3.js. Tableau, Gephi, Pajek, etc.) and programming (Python, Java, R, etc.). Currently I’m looking for a full-time job in Machine Learning scientist/engineer, data scientist and/or software developer. <br><br> You can find my resume  <a href="https://www.dropbox.com/s/5eou8bs00l62k5x/QING%20PING%202017-1.pdf?dl=0">here</a>.</p>
+            <p>I’m a fifth-year Ph.D. candidate in Information Science at Drexel University. My research interests include recommender systems incorporating a variety of textual information, natural language processing, and interactive visualizations of text documents at different levels. My skill set includes machine learning/NLP techniques (neural collaborative filtering models, text summarization/classification, sentiment analysis, deep learning), information visualization (D3.js, Tableau, Gephi, Pajek, etc.) and programming (Python, Java, R). <br><br> You can find my resume  <a href="https://drive.google.com/file/d/1Fs0ODX2LQlQA1L1BQWsdN6cHMgyKgF89/view?usp=sharing">here</a>.</p>
           </div>
         </div>
     </div>
