--- a/list.html
+++ b/list.html
@@ -46,6 +46,16 @@ title: All Posts
               <p color="#2d1e18" class="p2"><span color="#2d1e18" class="s1">Fan, Y., Hu, X., Tang, X., Ping, Q., & Wu, W. (2016, December). A novel algorithm for identifying essential proteins by integrating subcellular localization. In Bioinformatics and Biomedicine (BIBM), 2016 IEEE International Conference on (pp. 107-110). IEEE. Chicago.</span></p>
             </td>
           </tr>
+          <tr>
+            <td valign="top" class="td5">
+              <p color="#2d1e18" class="p2"><span color="#2d1e18" class="s1">Gao, J., Ping, Q., & Wang, J. (2017). Resisting re-identification mining on social graph data. World Wide Web, 1-13.</span></p>
+            </td>
+          </tr>
+          <tr>
+            <td valign="top" class="td5">
+              <p color="#2d1e18" class="p2"><span color="#2d1e18" class="s1">Park, J. R., Yang, C., Tosaka, Y., Ping, Q., & Mimouni, H. E. (2016). Developing an automatic crawling system for populating a digital repository of professional development resources: A pilot study. Journal of Electronic Resources Librarianship, 28(2), 63-72.</span></p>
+            </td>
+          </tr>
 
         </tbody>
       </table>
